--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 		  <section>
 		    <h2>Project 1</h2>
 		    <div class="grey-box">IMAGE</div>
-		    <p> Project description, technologies used & links </p>
+		    <p> Text </p>
 		  </section>
 
 		  <section>
 		    <h2>Project 2</h2>
 		    <div class="grey-box">IMAGE</div>
-		    <p> Project description, technologies used & links </p>
+		    <p> Text </p>
 		  </section>
 
 		  <section>
@@ -37,7 +37,7 @@
 
 		  <section>
 		    <h2>Contact</h2>
-		    <p> Links to Github, LinkedIn and email </p>
+		    <p> Links </p>
 		  </section>
 	     
 	  </main>
