Adds color and font + img

--- a/index.html
+++ b/index.html
@@ -5,39 +5,76 @@
 	  <meta name="viewport" content="width=device-width">
 	  <title>Keeley Duffey Portfolio</title>
 	  <link href="main.css" rel="stylesheet" type="text/css" />
+	  <link href="https://fonts.googleapis.com/css?family=Poiret+One|Raleway|Roboto" rel="stylesheet">
+	  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+	  
 	</head>
 	<body>
 		<header role="banner">
 	    <h1>Keeley Duffey</h1>
 	  </header>
 
-	  <div class="grey-box">IMAGE</div>
+	  <div class="img-wrapper">
+	  	<img src="assets/logo2.png" alt="KD logo">
+	  </div>
 
-	  <nav role="navigation">Nav</nav>
+	  <h2>Full stack developer looking to do good</h2>
+
+	  <nav role="navigation">
+  	  <ul>
+	    	<li>Portfolio</li>
+	    	<li>About</li>
+	    	<li>Contact</li>
+	    </ul>
+	  </nav>
 
 	  <main role="main">
 
 		  <section>
-		    <h2>Project 1</h2>
-		    <div class="grey-box">IMAGE</div>
-		    <p> Text </p>
+		    <h2>Pluto</h2>
+		    <p>
+		    	Pluto is a diversity and inclusion platform that provides companies with the tools and insights they need to build a diverse, inclusive and equitable workforce.  Companies gain actionable insights from comprehensive analytics, allowing them to tailor initiatives and measure their impact.  Pluto also offers incident reporting to remove barriers that have historically plagued incident reporting systems and help companies discover and address workplace issues faster.
+		    </p>
+		    <p>
+		    	MongoDb, Express, Angular 1.6, NodeJs, Highcharts, HMTL, CSS
+		    </p>
+		    <p>
+		    	<a href="https://pluto.life">View live</a>
+		    </p>
 		  </section>
 
 		  <section>
-		    <h2>Project 2</h2>
-		    <div class="grey-box">IMAGE</div>
-		    <p> Text </p>
+		    <h2>FRIENDS Quiz</h2>
+		    <p>
+		    	This was a short quiz about the television series FRIENDS
+		    </p>
+		    <p>
+		    	HMTL5, CSS, jQuery
+		    </p>
+		    <p>
+		    	<a href="https://keeleyduffey.github.io/quiz-app/">View live</a>
+		    	<a href="https://github.com/keeleyduffey/quiz-app/">View on Github</a>
+		    </p>
 		  </section>
 
 		  <section>
 		    <h2>About</h2>
 		    <div class="grey-box">IMAGE</div>
-		    <p> Bio Paragraph </p>
+		    <p> 
+		    	I am a full stack developer with 3 years of experience, currently working in Javascript, AngularJs, Express, NodeJs, MongoDB, and jQuery but always interested in learning more. I enjoy writing clean code, using new technologies, and leveraging the power of code to connect people. I also enjoy the continual learning that programming brings. 
+		    </p>
+		    <p>
+					Past experience in customer service and non-profit work, as well as living in a few countries, has taught me how to communicate effectively and adapt in order to be successful in various work environments.  As a developer, I bring these skills along with passion, dedication and self-awareness to the work I do. Outside of work, I enjoy spending time outdoors, watching college football (Go Dawgs!), traveling and reading good books.
+ 				</p>
 		  </section>
 
 		  <section>
 		    <h2>Contact</h2>
-		    <p> Links </p>
+		    <ul>
+		    	<li><i class="fab fa-linkedin-in"></i></li>
+		    	<li><i class="fab fa-github"></i></li>
+		    	<li><i class="fas fa-envelope"></i></li>
+		    </ul>
 		  </section>
 	     
 	  </main>
