Adds content and some styling

--- a/index.html
+++ b/index.html
@@ -5,45 +5,57 @@
 	  <meta name="viewport" content="width=device-width">
 	  <title>Keeley Duffey Portfolio</title>
 	  <link href="main.css" rel="stylesheet" type="text/css" />
+	  <link href="https://fonts.googleapis.com/css?family=Poiret+One|Raleway|Roboto" rel="stylesheet">
+	  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+	  
 	</head>
 	<body>
-		<header role="banner">
+		<header role="banner" class="intro-screen">
 	    <h1>Keeley Duffey</h1>
-	  </header>
+	  
+		  <div class="img-wrapper">
+		  	<img src="assets/logo2.png" alt="KD logo">
+		  </div>
 
-	  <div class="grey-box">IMAGE</div>
+		  <h2>Full stack developer looking to do good</h2>
 
-	  <nav role="navigation">Nav</nav>
+		  <nav role="navigation">
+	  	  <ul>
+		    	<li class="portfolio-btn"><a href="">Portfolio</a></li>
+		    	<li class="about-btn"><a href="">About</a></li>
+		    	<li class="contact-btn"><a href="">Contact</a></li>
+		    </ul>
+		  </nav>
+		</header>
 
-	  <main role="main">
+	  <main role="main" class="main-content">
+		  <div class="header-wrapper">
+		  	<a href="">
+			  	<h1>Keeley Duffey</h1>
+			  
+				  <div class="img-wrapper">
+				  	<img src="assets/logo2.png" alt="KD logo">
+				  </div>
+				</a>
 
-	  	<div class="projects-container">
-	  		<section class="projects-wrapper">
-			    <h2>Project 1</h2>
-			    <div class="grey-box">IMAGE</div>
-			    <p> Text </p>
-			  </section>
+			  <nav role="navigation">
+		  	  <ul>
+			    	<li class="portfolio-btn"><a href="">Portfolio</a></li>
+			    	<li class="about-btn"><a href="">About</a></li>
+			    	<li class="contact-btn"><a href="">Contact</a></li>
+			    </ul>
+			  </nav>
+			</div>
 
-			  <section class="projects-wrapper">
-			    <h2>Project 2</h2>
-			    <div class="grey-box">IMAGE</div>
-			    <p> Text </p>
-			  </section>
-	  	</div>
-		 
-
-		  <section class="about-container">
-		    <h2>About</h2>
-		    <div class="grey-box bio">IMAGE</div>
-		    <p class="bio-text"> Bio Paragraph </p>
-		  </section>
-
-		  <section>
-		    <h2>Contact</h2>
-		    <p> Links </p>
-		  </section>
-	     
+	  	<div class="container">
+			</div>
 	  </main>
-	  <footer role="content-info">Footer</footer>
+
+	  <footer role="content-info">Keeley Duffey 2019</footer>
+
+	  <script src="https://code.jquery.com/jquery-3.4.0.js"
+		  integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo="
+		  crossorigin="anonymous"></script>
+	  <script src="index.js"></script>
 	</body>
 </html>
