Adds compressed assets + updates styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	    <h1>Keeley Duffey</h1>
 	  
 		  <div class="img-wrapper">
-		  	<img src="assets/logo2.png" alt="KD logo">
+		  	<img src="assets/kd-logo.png" alt="KD logo">
 		  </div>
 
 		  <h2>Full stack developer looking to do good</h2>
@@ -34,7 +34,7 @@
 			  	<h1>Keeley Duffey</h1>
 			  
 				  <div class="img-wrapper">
-				  	<img src="assets/logo2.png" alt="KD logo">
+				  	<img src="assets/kd-logo.png" alt="KD logo">
 				  </div>
 				</a>
 
