Adds padding to headline

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		  	<img src="assets/kd-logo.png" alt="KD logo">
 		  </div>
 
-		  <h2>Full stack developer looking to do good</h2>
+		  <h2 class="headline">Full stack developer looking to do good</h2>
 
 		  <nav role="navigation">
 	  	  <ul>
