Fixes aria footer label issue + rearranges link text

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			</div>
 	  </main>
 
-	  <footer role="content-info">Keeley Duffey 2019</footer>
+	  <footer role="contentinfo">Keeley Duffey 2019</footer>
 
 	  <script src="https://code.jquery.com/jquery-3.4.0.js"
 		  integrity="sha256-DYZMCC8HTC+QDr5QNaIcfR7VSPtcISykd+6eSmBW5qo="
